<resources>
    <string name="app_name">왔니</string>
    <string name="app_name_eng">watni</string>
    <string name="app_desc">오늘 왔니, 안 왔니?</string>
    <string name="app_version">앱 버전 1.0.0-alpha</string>
    <string name="app_review">왔니 앱 평가하기</string>

    <!-- 공용으로 쓰이는 문자 -->
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="start">시작하기</string>
    <string name="close">닫기</string>
    <string name="back">뒤로가기</string>
    <string name="logout">로그아웃</string>
    <string name="date">날짜</string>
    <string name="time">시간</string>
    <string name="place">장소</string>
    <string name="conference">일정</string>
    <string name="title">제목</string>
    <string name="notice">공지</string>
    <string name="manager">관리자</string>
    <string name="user">회원</string>
    <string name="delete">삭제</string>
    <string name="enrollment">등록</string>
    <string name="edit">수정</string>
    <string name="edit_continue">계속 수정</string>
    <string name="camera">카메라</string>
    <string name="gallery">앨범</string>

    <string-array name="onboarding_msg">
        <item>저 왔어요!</item>
        <item>말할 필요 없이</item>
        <item>찰칵!</item>
        <item>출석 완료</item>
    </string-array>

    <string name="join_title">회원가입</string>
    <string name="join_name">이름</string>
    <string name="join_email">이메일</string>
    <string name="join_pwd">비밀번호</string>
    <string name="join_pwd_confirm">비밀번호 확인</string>
    <string name="join_fail_email">\@를 포함해 입력해주세요.</string>
    <string name="join_already_used_email">이미 사용중인 이메일입니다. 다른 이메일을 사용해주세요.</string>
    <string name="join_fail_pwd">비밀번호를 6~12자 사이로 입력해주세요.</string>
    <string name="join_fail_name">이름을 2~10자 사이로 입력해주세요.</string>
    <string name="join_fail_pwd_confirm">비밀번호가 일치하지 않습니다.</string>
    <string name="join_fail_empty">입력이 필요합니다.</string>
    <string name="join_success">회원가입이 완료되었습니다! 서비스 이용을 위해 로그인 해주세요.</string>

    <string name="login_title">로그인</string>
    <string name="login_forgot_pwd">비밀번호를 잊으셨나요?</string>
    <string name="login_fail_email">가입되지 않은 이메일입니다.</string>
    <string name="login_fail_pwd">비밀번호가 일치하지 않습니다.</string>
    <string name="login_fail_msg">로그인에 실패했습니다. 이메일 또는 비밀번호를 확인해주세요.</string>
    <string name="load_user_info_fail_msg">내 정보를 불러오는데 실패했습니다. 다시 시도해주세요.</string>

    <string name="group_welcome">%s님!\n반갑습니다.</string>
    <string name="group_create">모임 만들기</string>
    <string name="group_enter">모임 들어가기</string>
    <string name="group_create_success">모임이 생성되었습니다!</string>
    <string name="group_enter_success">가입이 완료되었습니다!</string>
    <string name="group_create_name">모임 이름을\n입력해주세요.</string>
    <string name="group_create_code">초대코드를\n생성해주세요.</string>
    <string name="group_already_used_code">이미 사용 중인 코드입니다.</string>
    <string name="group_input_code">초대코드를\n입력해주세요.</string>
    <string name="group_code_not_exist">존재하지 않는 초대 코드입니다.</string>
    <string name="msg_create_group_err">그룹 생성에 실패했습니다. 다시 시도해주세요.</string>
    <string name="msg_join_group_err">그룹 가입에 실패했습니다. 다시 시도해주세요.</string>

    <string name="msg_load_my_info_err">내 정보를 불러오는데 실패했습니다.\n다시 시도해주세요.</string>
    <string name="conference_img_example">인증샷 예시</string>
    <string name="conference_img_example_upload">인증샷 예시 올리기</string>
    <string name="conference_start_time">시작 시각</string>
    <string name="conference_end_time">종료 시각</string>
    <string name="conference_time_err">종료 시각은 시작 시각보다 늦게 설정되어야 합니다.</string>
    <string name="conference_upload">인증샷 예시 올리기</string>
    <string name="conference_upload_type1">앨범</string>
    <string name="conference_upload_type2">카메라</string>
    <string name="conference_delete_confirm">이 일정을 삭제하시겠습니까?</string>
    <string name="conference_delete_cancel">계속 수정</string>
    <string name="conference_check">왔어요!</string>
    <string name="conference_d_day">출석 D-%d</string>
    <string name="conference_complete">출석 완료</string>
    <string name="conference_complete_msg">%s님 반갑습니다!😍</string>
    <string name="conference_complete_date">%s\n출석 완료 되었습니다.</string>
    <string name="conference_create">일정 등록하기</string>
    <string name="conference_edit">일정 수정</string>
    <string name="conference_share">일정 공유</string>
    <string name="conference_delete">일정 삭제</string>
    <string name="conference_cancel_msg1">이런…🤢</string>
    <string name="conference_cancel_msg2">%s\n출석이 거부 당했습니다.</string>
    <string name="conference_empty_msg1">등록된 일정이 없어요…</string>
    <string name="conference_empty_msg2">조금만 기다려주세요 🌿</string>
    <string name="conference_create_msg1">일정을 등록해주세요!</string>
    <string name="conference_create_msg2">우측 상단 메뉴에서도 일정 등록이 가능합니다.</string>
    <string name="conference_coming">왔어요</string>
    <string name="conference_not_coming">안 왔어요</string>
    <string name="conference_create_success">일정이 생성되었습니다!</string>
    <string name="conference_title_limit">1~15자 사이로 입력해주세요.</string>
    <string name="conference_place_limit">장소를 입력해주세요.</string>

    <string name="menu_check_status">출석 현황</string>
    <string name="menu_add_conference">일정 등록</string>
    <string name="menu_edit_name">모임명 변경</string>
    <string name="menu_user_manage">회원 관리</string>
    <string name="menu_setting">설정</string>

    <string name="unknown">알 수 없는 동작입니다.</string>
    <string name="unknown_user">UNKNOWN</string>
    <string name="msg_network_auth">인증 에러가 발생했습니다. 다시 시도해주세요.</string>
    <string name="msg_network_err">네트워크 에러가 발생했습니다.\n다시 시도해주세요.</string>

    <string-array name="home_tab_titles">
        <item>일정</item>
        <item>출석 기록</item>
    </string-array>

    <string-array name="profile_icon_random">
        <item>😊️</item>
        <item>😍</item>
        <item>😎</item>
        <item>🐶</item>
        <item>🐰</item>
        <item>🐹</item>
        <item>🐻</item>
        <item>🐨</item>
        <item>🐵</item>
    </string-array>

    <string-array name="msg_welcome_random">
        <item>%s님 보고 싶었어요! ☺️</item>
        <item>%s님 오늘도 홧팅! 💪</item>
        <item>%s님 최고! 👍</item>
        <item>%s님 반가워요! 😉</item>
    </string-array>
</resources>
