<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:padding="16dp">

  <ScrollView
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
      android:id="@+id/email_login_form"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="@string/join_title"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

      <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
          android:id="@+id/et_join_name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/join_name"
          android:inputType="text"
          android:maxLines="1"
          android:singleLine="true" />

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
          android:id="@+id/et_join_email"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/join_email"
          android:inputType="textEmailAddress"
          android:maxLines="1"
          android:singleLine="true" />

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
          android:id="@+id/et_join_password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/join_pwd"
          android:inputType="textPassword"
          android:maxLines="1"
          android:singleLine="true" />

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp">

        <EditText
          android:id="@+id/et_join_pwd_confirm"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/join_pwd_confirm"
          android:inputType="textPassword"
          android:maxLines="1"
          android:singleLine="true" />

      </com.google.android.material.textfield.TextInputLayout>

      <Button
        android:id="@+id/join_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/join_title"
        android:textStyle="bold" />

    </LinearLayout>
  </ScrollView>

  <ProgressBar
    android:id="@+id/join_progress"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:visibility="gone"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>