<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <import type="android.app.Activity" />

    <variable
      name="viewModel"
      type="com.depromeet.watni.group.GroupViewModel" />
  </data>

  <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:padding="16dp">

      <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/back"
        android:onClick="@{(view)->((Activity)(view.getContext())).finish()}"
        android:src="@drawable/ic_back" />

      <TextView
        android:id="@+id/tv_group_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/spoqa_han_sans_bold"
        android:text="@string/group_create_name"
        android:textColor="@android:color/black"
        android:textSize="25sp" />

      <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
          android:id="@+id/et_group_input"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:importantForAutofill="no"
          android:inputType="text"
          android:maxLines="1"
          android:singleLine="true"
          android:text="@={viewModel.groupName}"
          android:textSize="14sp" />

      </com.google.android.material.textfield.TextInputLayout>

      <Button
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="42dp"
        android:background="@drawable/shape_rect_stroke_gray"
        android:padding="10dp"
        android:text="@string/ok"
        android:textColor="@color/color_gray"
        app:onSingleClick="@{() -> viewModel.createGroup()}"
        app:setEnable="@{viewModel.okBtnAvailable}" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/fragment_container_view_tag"
      android:layout_width="match_parent"
      android:layout_height="match_parent" />
  </FrameLayout>
</layout>